--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
     <script>dayjs.locale('pt-br')</script>
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>nlw-unite</title>
 </head>
 <body>
     <div class="container">
